# dlqpiler

./: LICENSE  README.md  pyproject.toml
dlqpiler/: ast.py  lexer.py  main.py  parser.py  qunits.py  synth.py  utils.py
dlqpiler_lib/: ast.py  lexer.py  parser.py
examples/: bsat.dlq  bsat.xlsx  primefac.dlq  primefac.xlsx
tests/: prime_factorization.ipynb  synth_test1.ipynb  test1.ipynb  tests.ipynb  xysys.ipynb
